{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 25,
  "lineage": "bd2a052a-2286-c22b-e58c-c66f14df9acb",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:622021885326:vpc/vpc-60c62808",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-954752fc",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-8b5da1e3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-60c62808",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-c525f1ad",
            "owner_id": "622021885326",
            "state": "available",
            "tags": {
              "Name": "default"
            }
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb_web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:622021885326:loadbalancer/app/test-value/42a80290072e856f",
            "arn_suffix": "app/test-value/42a80290072e856f",
            "dns_name": "test-value-1387274800.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:622021885326:loadbalancer/app/test-value/42a80290072e856f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-value",
            "security_groups": [
              "sg-0b1ede3c248a0142f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00be4c68"
              },
              {
                "subnet_id": "subnet-5397a128"
              },
              {
                "subnet_id": "subnet-a3e791ee"
              }
            ],
            "subnets": [
              "subnet-00be4c68",
              "subnet-5397a128",
              "subnet-a3e791ee"
            ],
            "vpc_id": "vpc-60c62808",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:622021885326:listener/app/test-value/42a80290072e856f/7e2d1e1a0158a326",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: ow doido, nem existe essa page",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:622021885326:listener/app/test-value/42a80290072e856f/7e2d1e1a0158a326",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:622021885326:loadbalancer/app/test-value/42a80290072e856f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.alb.aws_lb.lb_web",
            "module.alb.aws_security_group.alb_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:622021885326:security-group/sg-0b1ede3c248a0142f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b1ede3c248a0142f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "test-value",
            "name_prefix": "",
            "owner_id": "622021885326",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-value-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-60c62808"
          }
        }
      ]
    }
  ]
}